@@ -1432,7 +1432,8 @@ A:1/1
 N:186:Teleportation
 G:?:d
 I:70:9:0
-W:10:0:5:40
+#W:10:0:5:40
+W:10:0:5:400
 A:10/1
 
 N:187:Teleport Level
@@ -1554,8 +1555,10 @@ A:10/1
 N:205:Artifact Creation
 G:?:d
 I:70:52:0
-W:70:0:5:200000
-A:70/16
+#W:70:0:5:200000
+W:70:0:5:500000
+#A:70/16
+A:70/32
 
 N:206:Recharging
 G:?:d
@@ -6746,6 +6749,7 @@ A:40/60
 #F:BLACK_BREATH | DRAIN_EXP | DRAIN_MANA | DRAIN_HP
 F:DRAIN_EXP | DRAIN_MANA | DRAIN_HP
 F:IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
+F:AUTO_CURSE | CURSED 
 
 # Always ego!
 
